--- a/src/HomePage/HomePage.module.css
+++ b/src/HomePage/HomePage.module.css
@@ -41,7 +41,7 @@
     border-radius: 2rem;
 } */
 .home input{
-    width: calc(100%-2rem);
+    /* width: calc(100%-2rem); */
     color: #201e1e;
     font-weight: 600;
     background-color: #ffffffe2;
@@ -54,15 +54,16 @@
 }
 .home svg{
     position: absolute;
+    top: 10%;
     width: 40rem;
     transform: rotate(90deg);
 }
 .home svg:nth-child(1){
     fill: #ffc929;
-    right: 0;
+    right: -5%;
 }
 .home svg:nth-child(2){
-    right: 2%;
+    right: -3%;
 }
 .home input::placeholder{
     color: #201e1ea6;
@@ -115,4 +116,43 @@
     justify-content: space-evenly;
     width: 100vw;
     height: 50vh;
+}
+@media only screen and (max-width:1130px){
+    .home svg{
+        top: 10%;
+        opacity: 0.1;
+    }
+}
+@media only screen and (max-width:700px){
+    .scanner label{
+        font-size: 2rem;
+    }
+    .yellowText{
+        height: max-content;
+    }
+    .home input{
+        padding: 0.5rem 1rem;
+        font-size: 1.5rem;
+    }
+    .home button{
+        font-size: 1.5rem;
+        padding: 0.3rem;
+        width: 100%;
+        height: 2.5rem;
+    }
+}
+@media only screen and (max-width:460px){
+    .scanner label{
+        font-size: 1.5rem;
+    }
+    .home input{
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+    }
+    .home button{
+        font-size: 1rem;
+        padding: 0.1rem;
+        width: 100%;
+        height: 2rem;
+    }
 }
