--- a/src/HomePage/HomePage.module.css
+++ b/src/HomePage/HomePage.module.css
@@ -156,3 +156,8 @@
         height: 2rem;
     }
 }
+@media only screen and (max-width:350px){
+    .scanner label{
+        font-size: 1rem;
+    }
+}
