--- a/src/HomePage/HomePage.module.css
+++ b/src/HomePage/HomePage.module.css
@@ -1,5 +1,6 @@
 .home{
-    width: 100vw;
+    overflow: hidden;
+    max-width: 100vw;
     min-height: 100vh;
     background-color: #201e1e;
     color: white;
@@ -55,15 +56,15 @@
 .home svg{
     position: absolute;
     top: 10%;
-    width: 40rem;
+    width: 33rem;
     transform: rotate(90deg);
 }
 .home svg:nth-child(1){
     fill: #ffc929;
-    right: -5%;
+    right: 0%;
 }
 .home svg:nth-child(2){
-    right: -3%;
+    right: 2%;
 }
 .home input::placeholder{
     color: #201e1ea6;
