--- a/src/ScanDetails/ScanDetails.module.css
+++ b/src/ScanDetails/ScanDetails.module.css
@@ -1,13 +1,13 @@
 .scanDetails{
     box-sizing: border-box;
     position: relative;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     background-color: #201e1e;
     color: white;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 .info{
     display: flex;
@@ -166,7 +166,6 @@
     z-index: 3;
     /* filter: blur(5px); */
     position: absolute;
-    top: 20%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -195,7 +194,7 @@ a{
     color: #ffc929;
 }
 .descriptionInfo{
-    width: 80%;
+    width: 90%;
 }
 .description svg{
     cursor: pointer;
@@ -269,6 +268,11 @@ p{
     font-size: 3rem;
     color: #ffc929;
 }
+/* @media only screen and (max-width:1450px){
+    .description{
+        width: 50%;
+    }
+} */
 @media only screen and (max-width:1100px){
     .description{
         width: 40%;
@@ -327,7 +331,6 @@ p{
     .description{
         width: 70%;
         font-size: 1rem;
-        top: 10%;
     }
 }
 
