--- a/src/HomePage/HomePage.module.css
+++ b/src/HomePage/HomePage.module.css
@@ -12,10 +12,11 @@
 .scanner{
     z-index: 1;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     min-height: 60vh;
-    gap: 2rem;
-    width: 80%;
+    gap: 3rem;
+    width: 90%;
 }
 .scanner label{
     width: max-content;
@@ -28,7 +29,7 @@
 }
 .yellowText{
     z-index: 2;
-    height: 4rem;
+    font-size: 5rem;
     position: relative;
     color: #ffc929;
 }
@@ -43,80 +44,114 @@
 } */
 .home input{
     /* width: calc(100%-2rem); */
-    color: #201e1e;
-    font-weight: 600;
-    background-color: #ffffffe2;
-    padding: 0;
+    z-index: 1;
+    opacity: 0;
+    width: 75%;
+    min-height: 32rem;
     margin: 0;
-    border: none;
     border-radius: 1rem;
-    padding: 0.5rem 2rem;
-    font-size: 2rem;
 }
-.home svg{
+
+.credentials svg{
     position: absolute;
-    top: 10%;
-    width: 33rem;
-    transform: rotate(90deg);
+    fill: #a2a2a259;
+    width: 100%;
 }
-.home svg:nth-child(1){
+.fileUpload svg{
+    position: relative;
     fill: #ffc929;
-    right: 0%;
-}
-.home svg:nth-child(2){
-    right: 2%;
-}
-.home input::placeholder{
-    color: #201e1ea6;
-    font-weight: 600;
-    font-family: 'Gabarito';
-}
-.home input:focus{
-    outline: none;
+    width: 20%;
 }
 .credentials{
+    position: relative;
     display: flex;
     flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    justify-content: space-between;
+    width: 40%;
+    min-height: 12rem;
+}
+.fileUpload{
+    box-sizing: border-box;
+    position: absolute;
+    top: 35%;
+    font-family: 'Gabarito';
+    color:#ffc929;
+    width: 75%;
+    min-height: 50%;
+    font-weight: 600;
+    margin: 0;
+    font-size: 1.8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.fileUpload p{
+    margin: 0.5rem;
+}
+.buttons{
+    display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: max-content;
-    min-height: 12rem;
+    width: 75%;
+    gap: 2rem;
 }
 .home button{
     box-sizing: border-box;
     color: #201e1ee1;
-    padding: 1rem;
+    padding: 0.5rem;
     background-color: #ffc929;
     width: 100%;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: 'Gabarito';
     font-weight: 600;
     border-radius: 1rem;
     border: none;
-    height: 3rem;
+    height: 3.5rem;
     padding: 0;
     margin: 0;
+}
+.home button:nth-child(2){
+    background-color:aliceblue;
 }
 .caution{
     margin: 0;
     font-family: 'Gabarito';
-    color: rgb(219, 47, 47);
+    color: #ff0c01;
 }
-.info{
+.notInfected{
     display: flex;
-    width: 100vw;
-    height: 50vh;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    gap: 0.5rem;
+    color: #4ac96b;
+    font-size: 1.5rem;
 }
-.breaches{
+.notInfected svg{
+    fill: #4ac96b;
+    width: 1.5rem;
+}
+.infected{
+    display: flex;
+    gap: 0.5rem;
+    color: #ff0c01;
+    font-size: 1.5rem;
+}
+.infected svg{
+    fill: #ff0c01;
+    width: 1.5rem;
+}
+.viruses{
+    display: flex;
+    gap: 0.5rem;
+    font-size: 1.5rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100vw;
-    height: 50vh;
+    flex-wrap: wrap;
+}
+.viruses span{
+    font-size: 1.3rem;
+    color: #ff0c01;
 }
 @media only screen and (max-width:1130px){
     .home svg{
